# aoc2023

./: CMakeLists.txt
include/: libs.hpp  solution.hpp
src/: day1.cpp  day2.cpp  day3.cpp  main.cpp
